seo: add meta tags and sitemap for improved search engine visibility

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,16 @@
     <meta
       name="description"
       content="Ten-Factors is a practical and scalable framework for measuring and improving software quality in technology service companies and products/startups."
-    />
+      />
+    <meta name="keywords" content="software quality, quality framework, quality management software, software quality attributes, software quality best practices, software quality control" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <title>Ten-Factors – Open-Source Standard for Measuring Software Quality</title>
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <meta name="author" content="Ten-Factors Team" />
+    <meta name="publisher" content="Ten-Factors" />
+    <meta name="copyright" content="Ten-Factors" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
